# flet-apps

./: README.md  orm_lite.py  test.py
PhontomGate/: README.md  pyproject.toml
PhontomGate/src/: main.py  setting.py
app/: README.md
en-to-am/src/: main.py  test.py
mobil-am-to-latin/: README.md  pyproject.toml
mobil-am-to-latin/src/: main.py
